removed temp lorem text

--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Code Monkey</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Coding in HTML5, CSS, and JavaScript to make your visions a reality.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Full Stack Web Development</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Keeps your website looking good, and running good</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Multimedia Design</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>Web, Animation, Video</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
 									<h3>Consulting</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<p>You have a great idea, but don't know how to give it life? I can help you share your vision</p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -121,7 +121,8 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Need something that looks good done quick? Send me a message</p>
+							<p>I'm an expreienced animator, coder and designer. Sometimes 
+								I have time to work on exciting projects</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
