added style page to project file

--- a/projects.html
+++ b/projects.html
@@ -35,13 +35,34 @@
         <div class="intro">
           <h2>Projects</h2>
           <p>
-
+            Recent projects 
           </p>
         </div>
         <!--end intro-->
       </header>
-      <div class="about">
-
+      <div class="projects">
+        <div class="lambda-projects">
+          <h3>Lambda School Projects</h3>
+          <ul>
+            <li><a href="">
+              
+            </a></li>
+          </ul>
+        </div>
+        <div class="personal-projects">
+          <h3>Personal Projects</h3>
+          <ul>
+            <li><a href="http://elijahatkins.com/Paddle-Ball-Game/paddle-ball.html">
+              Paddle Ball - Made in javascript and HTML5
+            </a></li>
+            <li><a href="http://elijahatkins.com/Paddle-Ball-Game/racing-game.html">
+              Racing Game - Made in javascript and HTML5
+            </a></li>
+            <li><a href="https://github.com/elijah-atkins/Paddle-Ball-Game">
+              Sourcecode for Paddle Ball and Racing Game in github
+            </a></li>
+          </ul>
+        </div>
       </div>
 
     </div>
