--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Coming+Soon|Roboto&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Righteous|Ubuntu&display=swap" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
