--- a/skills.html
+++ b/skills.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skills</title>
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Coming+Soon|Roboto&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Righteous|Ubuntu&display=swap" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
@@ -35,7 +32,12 @@
         <div class="intro">
           <h2>Skills</h2>
           <p>
-
+            Understanding of Web Fundimentials including
+            <ul>
+              <li>HTML</li>
+              <li>JavaScript</li>
+              <li>CSS</li>
+            </ul>
           </p>
         </div>
         <!--end intro-->
