added additinal content

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Righteous|Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Ubuntu&display=swap" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
@@ -39,11 +39,34 @@
       </header>
       <div class="projects">
         <div class="lambda-projects">
-          <h3>Lambda School Projects</h3>
+          <h3>Lambda School Sprint Projects</h3>
+          <p>All Lambda School Sprints are compleated in 3 hours</p>
           <ul>
-            <li><a href="">
-              
+            <li><p>User Interface and Responsive Web Sprint Challenge</p>
+              <a href="Sprint-Challenge--User-Interface-master/index.html">Final Website</a>
+            <a href="https://github.com/elijah-atkins/Sprint-Challenge--User-Interface/settings">
+             Source files on github
             </a></li>
+            <li>
+            <p>Advanced CSS Sprint Challenge</p>
+            <a href="Sprint-Challenge--Advanced-CSS-elijah-atkins/index.html">
+            Final Website
+            </a>
+            <a href="https://github.com/elijah-atkins/Sprint-Challenge--Advanced-CSS/tree/elijah-atkins">
+              Source files on github
+            </a></li>
+            <li><p>JavaScript Foundations Sprint Challenge</p>
+              <a href="https://github.com/elijah-atkins/Sprint-Challenge--JavaScript/tree/elijah-atkins/challenges">
+              Source files on github
+            </a></li>
+            <p>Lambda School Build Week projects</p>
+            <li><p>Delivering a Multi-Page Marketing Website</p>
+              <a href="http://elijahatkins.com/BW-Marketing-Page/">
+              Final Website
+            </a>
+              <a href="https://github.com/elijah-atkins/BW-Marketing-Page">
+              Source files on github</a>
+          </li>
           </ul>
         </div>
         <div class="personal-projects">
