--- a/skills.html
+++ b/skills.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skills</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Righteous|Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Ubuntu&display=swap" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
