added style pages for skills and about page

--- a/about.html
+++ b/about.html
@@ -29,12 +29,25 @@
     </nav>
     <div class="container home">
       <header class="header">
-        <div class="intro">
+        <div class="about">
           <h2>About</h2>
           <p>
             Elijah Atkins is a Lambda School student learning full stack web
-            development
+            development. Currently living in colorful Colorado
           </p>
+          <h2>Social Media</h2>
+          <ul>
+            <li><a href="#">
+              Linkdin
+            </a></li>
+            <li><a href="https://github.com/elijah-atkins">
+              Github
+            </a></li>
+            <li><a href="https://www.instagram.com/elijahatkins/">
+              Instagram
+            </a></li>
+
+          </ul>
         </div>
         <!--end intro-->
       </header>
