--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
           </ul>
         </div>
         <div class="personal-projects">
-          <h3>Personal Projects</h3>
+          <h3>JavaScript Games</h3>
           <ul>
             <li><a href="http://elijahatkins.com/Paddle-Ball-Game/paddle-ball.html">
               Paddle Ball - Made in javascript and HTML5
