--- a/skills.html
+++ b/skills.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="container home">
       <header class="header">
-        <div class="intro">
+        <div class="skills">
           <h2>Skills</h2>
           <p>
             Understanding of Web Fundimentials including
