fixed wording on skills page

--- a/skills.html
+++ b/skills.html
@@ -32,12 +32,13 @@
         <div class="skills">
           <h2>Skills</h2>
           <p>
-            Understanding of Web Fundimentials including
+            Web Fundimentials including
             <ul>
               <li>HTML</li>
               <li>JavaScript</li>
               <li>CSS</li>
             </ul>
+            
           </p>
         </div>
         <!--end intro-->
