removed unused files

--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,7 @@
       </header>
       <div class="projects">
         <div class="lambda-projects">
-          <h3>Lambda School Sprint Projects</h3>
-          <p>All Lambda School Sprints are compleated in 3 hours</p>
+          <h3>Lambda School Sprints, compleated in under 3 hours</h3>
           <ul>
             <li><p>User Interface and Responsive Web Sprint Challenge</p>
               <a href="Sprint-Challenge--User-Interface-master/index.html">Final Website</a>
@@ -59,7 +58,7 @@
               <a href="https://github.com/elijah-atkins/Sprint-Challenge--JavaScript/tree/elijah-atkins/challenges">
               Source files on github
             </a></li>
-            <p>Lambda School Build Week projects</p>
+            <h3>Lambda School Build Week projects</h3>
             <li><p>Delivering a Multi-Page Marketing Website</p>
               <a href="http://elijahatkins.com/BW-Marketing-Page/">
               Final Website
