adjusting less styles

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="container home">
       <header class="header">
-        <div class="intro">
+        <div class="projects">
           <h2>Projects</h2>
           <p>
             Recent projects 
