corrected hrefs in projects page

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
         <div class="projects">
           <h2>Projects</h2>
           <p>
-            Recent projects 
+            2020 Projects
           </p>
         </div>
         <!--end intro-->
@@ -43,7 +43,7 @@
           <ul>
             <li><p>User Interface and Responsive Web Sprint Challenge</p>
               <a href="Sprint-Challenge--User-Interface-master/index.html">Final Website</a>
-            <a href="https://github.com/elijah-atkins/Sprint-Challenge--User-Interface/settings">
+            <a href="https://github.com/elijah-atkins/Sprint-Challenge--User-Interface/">
              Source files on github
             </a></li>
             <li>
@@ -51,11 +51,11 @@
             <a href="Sprint-Challenge--Advanced-CSS-elijah-atkins/index.html">
             Final Website
             </a>
-            <a href="https://github.com/elijah-atkins/Sprint-Challenge--Advanced-CSS/tree/elijah-atkins">
+            <a href="https://github.com/elijah-atkins/Sprint-Challenge--Advanced-CSS/">
               Source files on github
             </a></li>
             <li><p>JavaScript Foundations Sprint Challenge</p>
-              <a href="https://github.com/elijah-atkins/Sprint-Challenge--JavaScript/tree/elijah-atkins/challenges">
+              <a href="https://github.com/elijah-atkins/Sprint-Challenge--JavaScript/">
               Source files on github
             </a></li>
             <h3>Lambda School Build Week projects</h3>
