updated meta data

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Online web portfolio for Elijah Atkins created using create-react-app"
+      content="Hello, I’m Elijah Atkins. I’m Full Stack Web Developer familiar with modern web technologies like React and Node.js. I can create SPA's using React and Node. I’m comfortable coding in JavaScript, Python and Typescript. With a specialty in computer animation using a wide range of tools from simple JavaScript and CSS to high end 3D graphics and everything in between. I have an interest in Open Source, and AI aided art. Welcome to my online web portfolio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
